Name:             type-equality
Version:          0.1.0
Synopsis:         Type equality, coercion/cast and other operations.
Description:      In the presence of GADTs, sometimes a proof is
                  needed that two types are equal. This package
                  contains an equality type that does this, plus its
                  properties (reflexive, symmetric, transitive) and
                  some useful operations (substitution, congruence,
                  coercion/cast). It also contains a type class for
                  producing these equalities, providing a kind of
                  decidable equality on types.
Category:         Data
Cabal-Version:    >= 1.2.1
Author:           Erik Hesselink, Martijn van Steenbergen
License:          BSD3
License-File:     LICENSE
Maintainer:       hesselink@gmail.com
Build-Type:       Simple
Build-Depends:    base
Tested-With:      GHC == 6.10.3

HS-Source-Dirs:   src
GHC-Options:      -Wall
Exposed-Modules:  Data.Type.Equality
